<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">칼로리일기장</string>
    <string name="join_name">회원가입</string>

    <string name="act_detail">고객정보</string>
    <string name="act_update">고객정보 수정</string>

    <string name="name">품명</string>
    <string name="cus_name">이름</string>
    <string name="cus_addr">주소</string>
    <string name="cus_pw">비밀번호</string>
    <string name="cus_id">ID</string>
    <string name="id">ID</string>
    <string name="pass">PW</string>
    <string name="recevieName">받는사람</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>